kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: earztbrief-sender
  labels:
    app: earztbrief-semder
spec:
  replicas: 3
  selector:
    matchLabels:
      app: earztbrief-sender
  template:
    metadata:
      labels:
        app: earztbrief-sender
    spec:
      containers:
      - name: earztbrief-sender
        image: 765415433338.dkr.ecr.eu-central-1.amazonaws.com/earztbrief-sender:$IMAGE_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name: earztbrief-sender
spec:
  selector:
    app: earztbrief-sender
  ports:
    - port: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: earztbrief-sender
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/cors-allow-headers: Content-Type
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: https://earztbrief.med-united.health
    nginx.ingress.kubernetes.io/cors-expose-headers: X-Custom-Header
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
      - earztbrief-sender.med-united.health
      secretName: earztbrief-sender-tls
  rules:
  - host: earztbrief-sender.med-united.health
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: earztbrief-sender
              port:
                number: 8080
